--- a/css/_variables.css
+++ b/css/_variables.css
@@ -1,6 +1,7 @@
 :root {
-  --background-colour: #e5e5e5;
+  --background-colour: #f4f3ee;
+  --other-colour: #e5e5e5;
   --primary-colour: #f4f3ee;
   --primary-colour-hover: #c32c72;
-  --nav-colour: #FFFFF;
+  --nav-colour: #f4f3ee;
 }
